# ChangeLog for media-sound/gtkguitune
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/gtkguitune/ChangeLog,v 1.19 2009/05/02 15:05:33 ssuominen Exp $

*gtkguitune-0.8 (02 May 2009)

  02 May 2009; Samuli Suominen <ssuominen@gentoo.org>
  +gtkguitune-0.8.ebuild:
  Restore ebuild from Attic with version bump since it's now been ported to
  GTK+-2.0.

  19 Apr 2008; Samuli Suominen <ssuominen@gentoo.org>
  +files/gtkguitune-0.7-gcc43.patch, gtkguitune-0.7-r1.ebuild:
  Fix building with GCC 4.3 wrt #218404, thanks to Peter Alfredsen.

  29 Feb 2008; Carsten Lohrke <carlo@gentoo.org> gtkguitune-0.7-r1.ebuild:
  Remove icon extension from desktop entry to match Icon Theme Specification.

  19 Aug 2007; Samuli Suominen <ssuominen@gentoo.org>
  gtkguitune-0.7-r1.ebuild:
  amd64/x86/sparc stable

*gtkguitune-0.7-r1 (25 Mar 2007)

  25 Mar 2007; Samuli Suominen <ssuominen@gentoo.org>
  +gtkguitune-0.7-r1.ebuild:
  make_desktop_entry for bug 58107, thanks to Keith Lea.

  03 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

  04 Sep 2005; Diego Pettenò <flameeyes@gentoo.org> gtkguitune-0.7.ebuild:
  Don't install COPYING file.

  14 Sep 2004; Jeremy Huddleston <eradicator@gentoo.org>
  gtkguitune-0.7.ebuild:
  Stable amd64, sparc.

  03 Sep 2004; Jeremy Huddleston <eradicator@gentoo.org>
  gtkguitune-0.7.ebuild:
  Readded missing ~amd64 ~sparc.  Stable x86.

  01 Aug 2004; David Holm <dholm@gentoo.org> gtkguitune-0.7.ebuild:
  Added to ~ppc.

*gtkguitune-0.7 (23 Jul 2004)

  23 Jul 2004; Chris White <chriswhite@gentoo.org> +gtkguitune-0.7.ebuild:
  Version bump to close Bug #45340.  Thanks to Keith Lea for reporting.

  13 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org>
  gtkguitune-0.6.ebuild:
  Added to ~sparc and ~amd64

  31 Mar 2004; Jeremy Huddleston <eradicator@gentoo.org>
  gtkguitune-0.6.ebuild:
  Stable x86.
