@@ -1,12 +1,12 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/imp3sh/imp3sh-0.2.4.ebuild,v 1.4 2009/06/11 13:48:23 fauli Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/imp3sh/imp3sh-0.2.4.ebuild,v 1.5 2009/12/15 16:42:08 ssuominen Exp $
 
 inherit gnuconfig toolchain-funcs
 
 DESCRIPTION="flexible playlist manipulation shell and song player/streamer"
-HOMEPAGE="http://www.geocities.com/kman_can/"
-SRC_URI="http://www.geocities.com/kman_can/${P}.tar.gz"
+HOMEPAGE="http://www.gentoo.org/"
+SRC_URI="mirror://gentoo/${P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
