@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/imp3sh
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/imp3sh/ChangeLog,v 1.14 2009/06/11 13:48:23 fauli Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/imp3sh/ChangeLog,v 1.15 2009/12/15 16:42:08 ssuominen Exp $
+
+  15 Dec 2009; Samuli Suominen <ssuominen@gentoo.org> imp3sh-0.2.4.ebuild:
+  Remove geocities from HOMEPAGE and SRC_URI wrt #297028.
 
   11 Jun 2009; Christian Faulhammer <fauli@gentoo.org> imp3sh-0.2.4.ebuild:
   stable x86, bug 272815
